Revise installation guide for Apache Atlas 2.4.0
Updated the installation guide for Apache Atlas 2.4.0, including detailed steps for Java coexistence, Solr configuration, and troubleshooting common issues.